# mcl-bio

./: .gitignore  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  index.md
scripts/: make_figure.py
src/mcl_bio/: __init__.py  benchmark.py  cli.py
src/mcl_bio/backends/: numpy_backend.py  torch_backend.py
src/mcl_bio/baselines/: __init__.py  kalman.py
src/mcl_bio/core/: __init__.py  auxiliary.py  bootstrap.py  diffpf.py  filter.py  models.py  resampling.py
src/mcl_bio/examples/: __init__.py
src/mcl_bio/examples/vex_localization/data/: sample_odometry.csv
src/mcl_bio/utils/: metrics.py  plotting.py
tests/: test_bootstrap.py  test_diffpf.py  test_kalman.py  test_models.py  test_resampling.py
