[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcl-bio"
version = "1.0.0"
description = "Particle filter state estimation for robotics and biomedical signals"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.13"
authors = [{ name = "Aarav Dewan" }]
keywords = ["particle-filter", "mcl", "localization", "state-estimation", "biomedical"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.26,<3.0",
    "scipy>=1.13,<2.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
diff = ["torch>=2.4,<3.0"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "mkdocs-material>=9.5",
]

[project.scripts]
mcl-bio-demo = "mcl_bio.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcl_bio"]

[tool.hatch.build]
sources = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false  # numpy/scipy stubs pervasively return Any
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
